[book-server] 1. mysql 세팅 2. mybatis 세팅

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# mysql
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3307/board
+spring.datasource.username=boardadmin
+spring.datasource.password=1234
+mybatis.mapper-locations=classpath:com.fastcampus.boardserver.mapper/*.xml
