--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.datasource.jdbc-url=jdbc:mysql://localhost:3307/board
 spring.datasource.username=boardadmin
 spring.datasource.password=1234
-mybatis.mapper-locations=classpath:com.fastcampus.boardserver.mapper/*.xml
+mybatis.mapper-locations=classpath:me.ricky.boardserver.mapper/*.xml
